@@ -539,7 +539,8 @@ bool Context::verbose (const std::string& token)
           v != "special"  &&  //
           v != "project"  &&  //
           v != "sync"     &&  //
-          v != "filter")      //
+          v != "filter"   &&  //
+          v != "unwait")      //
       {
         // This list emulates rc.verbose=off in version 1.9.4.
         verbosity = {"blank", "label", "new-id", "edit"};
@@ -550,7 +551,7 @@ bool Context::verbose (const std::string& token)
     if (! verbosity.count ("footnote"))
     {
       // TODO: Some of these may not use footnotes yet.  They should.
-      for (auto flag : {"affected", "new-id", "new-uuid", "project"})
+      for (auto flag : {"affected", "new-id", "new-uuid", "project", "unwait"})
       {
         if (verbosity.count (flag))
         {
