@@ -878,6 +878,7 @@
 #define STRING_TDB2_UNDO_COMPLETE    "Malfaris komplete."
 #define STRING_TDB2_UNDO_SYNCED      "Ne povos malfari ŝanĝon ĉar la tasko estis jam sinkronigita.  Modifu anstataŭe la taskon."
 #define STRING_TDB2_DIRTY_EXIT       "Eliranta kun neskribitajn ŝanĝojn al {1}"
+#define STRING_TDB2_UNWAIT           "Un-waiting task '{1}'"
 
 // View
 #define STRING_VIEW_TOO_SMALL        "La raporto havas larĝecminimumon {1}, al kio ne konformas la disponebla larĝeco {2}."
