@@ -125,6 +125,7 @@
           David Patrick).
 - TW-1655 Inform "No changes made." when quitting early due to signal (thanks
           to Daniel Shahaf).
+- TW-1664 Notify of waiting→pending promotion (thanks to Daniel Shahaf).
 - TW-1666 import should reject invalid data (thanks to Daniel Shahaf).
 - Prevent potential task duplication during import for non-pending tasks.
 - Show the active context in "context list", if any is active.
